# smart-clip

./: LICENSE  README-zh.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: design.md  yomemo_integration_plan.md
src/: App.tsx  background.ts  i18n.ts  index.css  workspace.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/yomemo/: client.rs  config.rs  crypto.rs  mod.rs  sync.rs
