[package]
name = "smart-clip"
version = "0.1.0"
description = "Minimal cross-platform clipboard with history"
authors = ["smart-clip"]
edition = "2021"

[lib]
name = "smart_clip_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
