[package]
name = "smart-clip"
version = "0.1.0"
description = "Minimal cross-platform clipboard with history"
authors = ["smart-clip"]
edition = "2021"

[lib]
name = "smart_clip_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
